logo fix on mobile

--- a/style.css
+++ b/style.css
@@ -35,10 +35,18 @@
       .tabs dd { text-align: center; }
       body {background-color:#eeeeee;}
       .top-bar {height: 55px;background: #002B56 url("mockup-images/nav-centrelinks.png") no-repeat 50% center;}
-          .preloaded.row {padding-top:145px;}
-      @media only screen and (max-width: 40em) { 
+      .preloaded.row {padding-top:145px;}
+      img.logo {margin-top:-14px;}
+      @media only screen and (max-width: 40em) {
           .top-bar {background:#002B56;}
           .preloaded.row {padding-top:65px;}
+          img.logo {
+              position: relative;
+              margin: 0 auto;
+              margin-top: -45px;
+              display: block;
+              height: 36px;
+          }
       }
       .top-bar-section li:not(.has-form) a:not(.button) {
         padding: 0 15px;
@@ -65,4 +73,5 @@
       .offcanvas-overlap-right .exit-off-canvas:hover {
           background: rgba(0,0,0,0.3);
       }
+
  
